--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Instamani mock</title>
+    <title>Instagram mock</title>
   </head>
   <body>
     <div>
       <div class="main">
         
+
       </div>
     </div>
   </body>
