--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <body>
     <div>
       <div class="main">
-        
+        <div class="leftcol">
 
+        </div>
+        <div class="rightcol">
+
+        </div>
       </div>
     </div>
   </body>
