--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Instagram mock</title>
   </head>
   <body>
-    <div>
-      <div class="main">
+    <div class="main">
+      <div >
         <div class="leftcol">
-
+          <img class="leftimg" src="./images/instagram.png">
         </div>
         <div class="rightcol">
-
+          <img class="rightimg" src="./images/sidebar.png">
         </div>
       </div>
+      <footer class="footer">
+        Copyright (c) 2018 Instamani All Rights Reserved.
+      </footer>
     </div>
   </body>
 </html>
