--- a/index.html
+++ b/index.html
@@ -7,17 +7,45 @@
   </head>
   <body>
     <div class="main">
-      <div >
-        <div class="leftcol">
-          <img class="leftimg" src="./images/instagram.png">
+      <div class="leftcol">
+        <img class="leftimg" src="./images/leftcol.png">
+      </div>
+      <div class="rightcol">
+        <header>
+          <img class="rightbanner" src="./images/insta.png">
+          <h2 class="righthead">Sign up to see photos and videos from your friends.</h2>
+        </header>
+        <div id="fbbut">
+          <button class="frs2">Log in with Facebook</button>
         </div>
-        <div class="rightcol">
-          <img class="rightimg" src="./images/sidebar.png">
+        <div class="or">
+          <h3 class="righthead2">OR</h3>
+        </div>
+        <div class="divformright">
+          <form action="/action_page.php">
+            <input class="formright" type="text" name="fname" value="Mobile Number or Email"><br>
+            <input class="formright" type="text" name="lname" value="Full Name"><br>
+            <input class="formright" type="text" name="lname" value="Username"><br>
+            <input class="formright" type="text" name="lname" value="Password"><br>
+            <section class="submitsec">
+            <input class="frs" type="submit" value="Next">
+          </form>
+            </section>
+        </div>
+        <div>
+          <article class="righthead">
+            <p class="pfoot">By signing up, you agree to our Terms. Learn how we collect, use and share your data in our Data Policy and how we use cookies and similar technology in our Cookies Policy.</p>
+          </article>
+        </div>
+        <div>
+          <div class="login">
+            <p>Have an account?<a href="#"> log in</a></p>
+          </div>
         </div>
       </div>
-      <footer class="footer">
-        Copyright (c) 2018 Instamani All Rights Reserved.
-      </footer>
     </div>
-  </body>
+        <footer class="footer">
+          Copyright (c) 2018 Instamani All Rights Reserved.
+        </footer>
+    </body>
 </html>
