--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </div>
         <div class="divformright">
           <form action="/action_page.php">
-            <input class="formright" type="text" name="fname" value="Mobile Number or Email"><br>
-            <input class="formright" type="text" name="lname" value="Full Name"><br>
-            <input class="formright" type="text" name="lname" value="Username"><br>
-            <input class="formright" type="text" name="lname" value="Password"><br>
-            <section class="submitsec">
-            <input class="frs" type="submit" value="Next">
+            <input class="formright" type="text" name="fname" placeholder="Mobile Number or Email"><br>
+            <input class="formright" type="text" name="lname" placeholder="Full Name"><br>
+            <input class="formright" type="text" name="lname" placeholder="Username"><br>
+            <input class="formright" type="text" name="lname" placeholder="Password"><br>
+            <div class="submitsec">
+              <input class="frs" type="submit" value="Next">
+            </div>
           </form>
-            </section>
         </div>
         <div>
           <article class="righthead">
@@ -44,8 +44,10 @@
         </div>
       </div>
     </div>
+    <div class="divfooter">
         <footer class="footer">
           Copyright (c) 2018 Instamani All Rights Reserved.
         </footer>
+    </div>
     </body>
 </html>
