--- a/index.html
+++ b/index.html
@@ -1,53 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Instagram mock</title>
-  </head>
-  <body>
-    <div class="main">
-      <div class="leftcol">
-        <img class="leftimg" src="./images/leftcol.png">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./css/css/bootstrap.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Instagram mock</title>
+</head>
+
+<body>
+  <div class="container d-flex bg-light">
+    <div class="page-header">
+      <h1></h1>
+    </div>
+    <div class="row text-center">
+      <div class="col-lg-2">
       </div>
-      <div class="rightcol">
-        <header>
-          <img class="rightbanner" src="./images/insta.png">
-          <h2 class="righthead">Sign up to see photos and videos from your friends.</h2>
-        </header>
-        <div id="fbbut">
-          <button class="frs2">Log in with Facebook</button>
+      <div class="col-lg-3">
+        <img class="image-responsive" src="./images/leftcol.png">
+      </div>
+      <div class="col-lg-1">
+      </div>
+      <div class="col-lg-4">
+        <div class="row">
+          <div class="col-lg-2">
+          </div>
+          <div class="col-lg-8">
+            <img class="image-responsive" src="./images/instag.png">
+          </div>
+          <div class="col-lg-2">
+          </div>
         </div>
-        <div class="or">
-          <h3 class="righthead2">OR</h3>
+        <div class="row">
+          <div class="col-lg-2">
+          </div>
+          <div class="col-lg-8">
+            <h4 class="text-muted text-center">Sign up to see photos and videos from your friends.</h4>
+          </div>
+          <div class="col-lg-2">
+          </div>
         </div>
-        <div class="divformright">
-          <form action="/action_page.php">
-            <input class="formright" type="text" name="fname" placeholder="Mobile Number or Email"><br>
-            <input class="formright" type="text" name="lname" placeholder="Full Name"><br>
-            <input class="formright" type="text" name="lname" placeholder="Username"><br>
-            <input class="formright" type="text" name="lname" placeholder="Password"><br>
-            <div class="submitsec">
-              <input class="frs" type="submit" value="Next">
+        <div class="row">
+          <div class="col-lg-1">
+          </div>
+          <div class="col-lg-10">
+            <div class="text-center">
+              <button><a class="fa fa-facebook" href="#" role="button"> Log in with Facebook</a></button>
             </div>
-          </form>
-        </div>
-        <div>
-          <article class="righthead">
-            <p class="pfoot">By signing up, you agree to our Terms. Learn how we collect, use and share your data in our Data Policy and how we use cookies and similar technology in our Cookies Policy.</p>
-          </article>
-        </div>
-        <div>
-          <div class="login">
-            <p>Have an account?<a href="#"> log in</a></p>
+          </div>
+          <div class="col-lg-1">
           </div>
         </div>
       </div>
+      <div class="col-lg-2">
+      </div>
     </div>
-    <div class="divfooter">
-        <footer class="footer">
-          Copyright (c) 2018 Instamani All Rights Reserved.
-        </footer>
-    </div>
-    </body>
+  </div>
+</body>
+
 </html>
