--- a/index.html
+++ b/index.html
@@ -9,54 +9,100 @@
   <title>Instagram mock</title>
 </head>
 
-<body>
-  <div class="container d-flex bg-light">
-    <div class="page-header">
-      <h1></h1>
-    </div>
-    <div class="row text-center">
-      <div class="col-lg-2">
-      </div>
-      <div class="col-lg-3">
-        <img class="image-responsive" src="./images/leftcol.png">
-      </div>
-      <div class="col-lg-1">
-      </div>
-      <div class="col-lg-4">
-        <div class="row">
-          <div class="col-lg-2">
-          </div>
-          <div class="col-lg-8">
-            <img class="image-responsive" src="./images/instag.png">
-          </div>
-          <div class="col-lg-2">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-2">
-          </div>
-          <div class="col-lg-8">
-            <h4 class="text-muted text-center">Sign up to see photos and videos from your friends.</h4>
-          </div>
-          <div class="col-lg-2">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-1">
-          </div>
-          <div class="col-lg-10">
-            <div class="text-center">
-              <button><a class="fa fa-facebook" href="#" role="button"> Log in with Facebook</a></button>
-            </div>
-          </div>
-          <div class="col-lg-1">
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-      </div>
-    </div>
+<body style="background:#fafafa">
+
+
+  <div class="page-header">
+    <h1> <small></small></h1>
   </div>
+
+  <div class="container">
+    <!-- main container -->
+    <div class="row">
+
+      <div class="col-md-5" style="padding-right:5%;"> <!-- left side container -->
+
+        <div class="row">
+
+          <div class="col col-md-4">
+          </div>
+
+          <div class="col col-md-8">
+
+            <div class="page-header">
+              <h1> <small></small></h1>
+            </div>
+
+            <div id="phones">
+              <img class="image-responsive" src="./images/leftcol.png">
+            </div>
+
+          </div> <!-- row close -->
+
+        </div>
+
+      </div> <!-- left side container close -->
+
+      <div class="col-md-1">
+      </div>
+
+      <div class="col-md-4" style="padding:1%;"> <!-- right side container -->
+
+        <div class="panel text-center" style="padding:15% 1%;"> <!-- main row -->
+
+          <div class="row">
+
+            <div class="col-md-12">
+              <img class="image-responsive" src="./images/instag.png">
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-2">
+            </div>
+
+            <div class="col-md-8">
+              <h4 class="text-muted text-center">Sign up to see photos and videos from your friends.</h4>
+            </div>
+
+            <div class="col-md-2">
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-12">
+              <a href="#" title="Facebook" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-fw"></i>Log in with Facebook</a>
+            </div>
+
+          </div>
+
+          <div class="row" style="padding:0px 10%;">
+
+            <div class="col-md-5" style="padding-bottom:10px;">
+              <hr>
+            </div>
+
+            <div class="col-md-2 text-muted">
+              <h5>OR</h5>
+            </div>
+
+            <div class="col-md-5" style="padding-bottom:10px;">
+              <hr>
+            </div>
+
+      </div> <!-- main row close -->
+
+      <div class="col-md-2">
+      </div>
+
+    </div> <!-- right side cont close -->
+
+  </div>    <!--main container close-->
+
 </body>
 
 </html>
