--- a/index.html
+++ b/index.html
@@ -20,39 +20,48 @@
     <!-- main container -->
     <div class="row">
 
-      <div class="col-md-5" style="padding-right:5%;"> <!-- left side container -->
+      <div class="col-md-6 col-sm-12" style="">
+        <!-- left side container -->
 
         <div class="row">
 
-          <div class="col col-md-4">
+          <div class="col-md-4 col-sm-1">
           </div>
 
-          <div class="col col-md-8">
+          <div class="col-md-8 col-sm-10">
 
             <div class="page-header">
-              <h1> <small></small></h1>
+              <h1></h1>
+            </div>
+
+            <div class="page-header">
+              <h1></h1>
             </div>
 
             <div id="phones">
-              <img class="image-responsive" src="./images/leftcol.png">
+              <img class="img-responsive" src="./images/leftcol.png">
             </div>
 
-          </div> <!-- row close -->
+          </div>
 
         </div>
+        <!-- row close -->
 
-      </div> <!-- left side container close -->
+      </div>
+      <!-- left side container close -->
 
-      <div class="col-md-1">
+      <div class="col-md-0 col-sm-0">
       </div>
 
-      <div class="col-md-4" style="padding:1%;"> <!-- right side container -->
+      <div class="col-md-4 col-sm-12" style="padding:1%;">
+        <!-- right side container -->
 
-        <div class="panel text-center" style="padding:15% 1%;"> <!-- main row -->
+        <div class="panel text-center" style="padding:15% 1%;">
+          <!-- main row -->
 
           <div class="row">
 
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
               <img class="image-responsive" src="./images/instag.png">
             </div>
 
@@ -60,21 +69,21 @@
 
           <div class="row">
 
-            <div class="col-md-2">
+            <div class="col-md-2 col-sm-0">
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-12">
               <h4 class="text-muted text-center">Sign up to see photos and videos from your friends.</h4>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-2 col-sm-0">
             </div>
 
           </div>
 
           <div class="row">
 
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
               <a href="#" title="Facebook" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-fw"></i>Log in with Facebook</a>
             </div>
 
@@ -82,26 +91,32 @@
 
           <div class="row" style="padding:0px 10%;">
 
-            <div class="col-md-5" style="padding-bottom:10px;">
+            <div class="col-md-5 col-sm-5" style="padding-bottom:10px;">
               <hr>
             </div>
 
-            <div class="col-md-2 text-muted">
+            <div class="col-md-2 col-sm-2 text-muted">
               <h5>OR</h5>
             </div>
 
-            <div class="col-md-5" style="padding-bottom:10px;">
+            <div class="col-md-5 col-sm-5" style="padding-bottom:10px;">
               <hr>
             </div>
 
-      </div> <!-- main row close -->
+          </div>
+        </div>
+      </div>
+      <!-- main row close -->
 
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-0">
       </div>
 
-    </div> <!-- right side cont close -->
+    </div>
+  </div>
+  <!-- right side cont close -->
 
-  </div>    <!--main container close-->
+  </div>
+  <!--main container close-->
 
 </body>
 
