--- a/index.html
+++ b/index.html
@@ -11,36 +11,29 @@
 
 <body style="background:#fafafa">
 
-
-  <div class="page-header">
-    <h1> <small></small></h1>
-  </div>
-
-  <div class="container">
+  <div class="container pad">
     <!-- main container -->
     <div class="row">
 
-      <div class="col-md-6 col-sm-12" style="">
+      <div class="col-md-4 col-sm-6 col-xs-0">
         <!-- left side container -->
 
         <div class="row">
 
-          <div class="col-md-4 col-sm-1">
+          <div class="col-md-4 col-sm-12">
           </div>
 
-          <div class="col-md-8 col-sm-10">
+          <div class="col-md-6 col-sm-0">
 
-            <div class="page-header">
-              <h1></h1>
+            <div class="container-fluid">
+
+
+              <div id="phones">
+                <img class="image" src="./images/leftcol.png">
+              </div>
+
             </div>
 
-            <div class="page-header">
-              <h1></h1>
-            </div>
-
-            <div id="phones">
-              <img class="img-responsive" src="./images/leftcol.png">
-            </div>
 
           </div>
 
@@ -50,73 +43,217 @@
       </div>
       <!-- left side container close -->
 
-      <div class="col-md-0 col-sm-0">
+      <div class="col-md-2 col-sm-0 col-xs-2">
       </div>
 
-      <div class="col-md-4 col-sm-12" style="padding:1%;">
+      <div class="col-md-4 col-sm-6 col-xs-8">
         <!-- right side container -->
 
-        <div class="panel text-center" style="padding:15% 1%;">
-          <!-- main row -->
+        <div class="container-fluid">
 
-          <div class="row">
+          <div class="panel text-center mp">
+            <!-- main row -->
 
-            <div class="col-md-12 col-sm-12">
-              <img class="image-responsive" src="./images/instag.png">
+            <div class="row">
+
+              <div class="col-md-12 col-sm-12">
+                <img class="image-responsive" src="./images/instag.png">
+              </div>
+
+            </div>
+
+            <div class="row">
+
+              <div class="col-md-2 col-sm-0">
+              </div>
+
+              <div class="col-md-8 col-sm-12">
+                <h5 class="text-muted text-center">Sign up to see photos and videos from your friends.</h5>
+              </div>
+
+              <div class="col-md-2 col-sm-0">
+              </div>
+
+            </div>
+
+            <div class="row">
+
+              <div class="col-md-1 col-sm-1">
+              </div>
+
+              <div class="col-md-10 col-sm-10 pad-bottom">
+                <input class="btn-block fb" type="submit" value="Log in with Facebook">
+              </div>
+
+              <div class="col-md-1 col-sm-10">
+              </div>
+
+            </div>
+
+            <div class="row">
+
+              <div class="col-md-1 col-sm-1 col-xs-1">
+
+              </div>
+
+              <div class="col-md-4 col-sm-4 col-xs-4">
+                <hr>
+              </div>
+
+              <div class="col-md-2 col-sm-2 col-xs-2 text-muted">
+                <h5>OR</h5>
+              </div>
+
+              <div class="col-md-4 col-sm-4 col-xs-4">
+                <hr>
+              </div>
+
+              <div class="col-md-1 col-sm-1 col-xs-1">
+
+              </div>
+
+            </div>
+
+            <div>
+              <form action="/action_page.php">
+                <input class="formright w100" type="text" name="fname" placeholder="Mobile Number or Email"><br>
+                <input class="formright w100" type="text" name="lname" placeholder="Full Name"><br>
+                <input class="formright w100" type="text" name="lname" placeholder="Username"><br>
+                <input class="formright w100" type="text" name="lname" placeholder="Password"><br>
+                <div class="submitsec">
+                </div>
+              </form>
+            </div>
+
+            <div class="row">
+
+              <div class="col-md-1 col-sm-1">
+              </div>
+
+              <div class="col-md-10 col-sm-10 pad">
+                <input class="btn-block fb" type="submit" value="Next">
+              </div>
+
+              <div class="col-md-1 col-sm-1">
+              </div>
+
+            </div>
+
+            <div class="row">
+
+              <div class="col-md-2 col-sm-2 col-xs-2">
+              </div>
+
+              <div class="col-md-8 col-sm-8 col-xs-8 text-muted">
+                By signing up, you agree to our Terms. Learn how we collect, use and share your data in our Data Policy and how we use cookies and similar technology in our Cookies Policy.
+              </div>
+
+            </div>
+
+          </div>
+          <!-- main row close -->
+
+          <div class="panel sp">
+            <!--secondary row-->
+
+            <div class="row">
+
+              <div class="col-md-2">
+              </div>
+
+              <div class="col-md-8 text-center">
+                <p>Have an account? <a href="https://www.instagram.com/accounts/login/">Log in</a></p>
+              </div>
+
+            </div>
+
+          </div>
+          <!--secondary row close-->
+
+          <div class="text-center">
+
+            <div class="row">
+
+              <div class="col-md-3">
+              </div>
+
+              <div class="col-md-6 gta">
+                <p>Get the app.</p>
+              </div>
+
             </div>
 
           </div>
 
-          <div class="row">
+          <div class="container-fluid">
 
-            <div class="col-md-2 col-sm-0">
-            </div>
+            <div class="row">
 
-            <div class="col-md-8 col-sm-12">
-              <h4 class="text-muted text-center">Sign up to see photos and videos from your friends.</h4>
-            </div>
+              <div class="col-md-1 col-sm-2">
+              </div>
 
-            <div class="col-md-2 col-sm-0">
-            </div>
+              <div class="col-md-5 col-sm-4">
 
-          </div>
+                <div>
 
-          <div class="row">
+                  <img class="img-responsive" src="./images/apple.png" alt="Appstore logo">
 
-            <div class="col-md-12 col-sm-12">
-              <a href="#" title="Facebook" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-fw"></i>Log in with Facebook</a>
-            </div>
+                </div>
 
-          </div>
+              </div>
 
-          <div class="row" style="padding:0px 10%;">
+              <div class="col-md-5 col-sm-4">
 
-            <div class="col-md-5 col-sm-5" style="padding-bottom:10px;">
-              <hr>
-            </div>
+                <div>
 
-            <div class="col-md-2 col-sm-2 text-muted">
-              <h5>OR</h5>
-            </div>
+                  <img class="img-responsive" src="./images/google.png" alt="Appstore logo">
 
-            <div class="col-md-5 col-sm-5" style="padding-bottom:10px;">
-              <hr>
+                </div>
+
+              </div>
+
+              <div class="col-md-1 col-sm-2">
+              </div>
+
             </div>
 
           </div>
+
         </div>
-      </div>
-      <!-- main row close -->
 
-      <div class="col-md-2 col-sm-0">
+      </div>
+      <!-- right side cont close -->
+
+
+      <div class="col-md-2 col-sm-0 col-xs-2">
+      </div>
+
+
+
+    </div>
+    <!--main container close-->
+
+    <div class="container-fluid ftr">
+
+      <div class="footer text-center">
+
+        <a>ABOUT US</A>
+        <a>SUPPORT</A>
+        <a>BLOG</A>
+        <a>PRESS</A>
+        <a>API</A>
+        <a>JOBS</A>
+        <a>PRIVACY</A>
+        <a>TERMS</A>
+        <a>DIRECTORY</A>
+        <a>PROFILES</A>
+        <a>HASHTAGS</A>
+        <a>LANGUAGE</A>
+
       </div>
 
     </div>
-  </div>
-  <!-- right side cont close -->
 
-  </div>
-  <!--main container close-->
 
 </body>
 
