--- a/index.html
+++ b/index.html
@@ -11,218 +11,214 @@
 
 <body style="background:#fafafa">
 
-  <div class="container-fluid">
+  <div class="row">
 
-    <div class="row">
+    <div class="col-lg-1 col-md-1 col-sm-2">
+    </div>
 
-      <div class="col-lg-1 col-md-0 col-sm-2">
-      </div>
+    <div class="col-lg-10 col-md-10 col-sm-8">
 
-      <div class="col-lg-10 col-md-12 col-sm-8">
+      <div class="container-flex pad">
+        <!-- main container -->
+        <div class="row">
 
-        <div class="container-fluid pad">
-          <!-- main container -->
-          <div class="row">
+          <div class="col-lg-4 col-md-1 col-sm-0 col-xs-0">
+            <!-- left side container -->
 
-            <div class="col-lg-2 col-md-1 col-sm-0 col-xs-0">
-              <!-- left side container -->
+            <div class="row">
 
-              <div class="row">
-
-                <div class="col-md-4 col-sm-12">
-                </div>
-
-                <div class="col-md-6 col-sm-0 phoneban">
-
-                  <div class="container-fluid">
-
-                    <div id="phones">
-                      <img class="image" src="./images/leftcol.png">
-                    </div>
-
-                  </div>
-
-
-                </div>
-
+              <div class="col-md-4 col-sm-12">
               </div>
-              <!-- row close -->
 
-            </div>
-            <!-- left side container close -->
-
-            <div class="col-lg-3 col-md-7 col-sm-1 col-xs-0">
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-              <!-- right side container -->
-
-              <div class="container-flex">
-
-                <div class="panel text-center mp">
-                  <!-- main row -->
-
-                  <div class="row">
-
-                    <div class="col-md-12 col-sm-12">
-                      <img class="" src="./images/instag.png">
-                    </div>
-
-                  </div>
-
-                  <div class="row">
-
-                    <div class="col-md-2 col-sm-0 col-xs-1">
-                    </div>
-
-                    <div class="col-md-8 col-sm-12 col-xs-10">
-                      <h5 class="text-muted text-center">Sign up to see photos and videos from your friends.</h5>
-                    </div>
-
-                    <div class="col-md-2 col-sm-0 col-xs-1">
-                    </div>
-
-                  </div>
-
-                  <div class="row">
-
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-                    </div>
-
-                    <div class="col-md-10 col-sm-10 col-xs-10 pad-bottom">
-                      <input class="btn-block fb" type="submit" value="Log in with Facebook">
-                    </div>
-
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-                    </div>
-
-                  </div>
-
-                  <div class="row">
-
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-
-                    </div>
-
-                    <div class="col-md-4 col-sm-4 col-xs-4">
-                      <hr>
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 col-xs-2 text-muted">
-                      <h5>OR</h5>
-                    </div>
-
-                    <div class="col-md-4 col-sm-4 col-xs-4">
-                      <hr>
-                    </div>
-
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-
-                    </div>
-
-                  </div>
-
-                  <div>
-                    <form action="/action_page.php">
-                      <input class="formright w100" type="text" name="fname" placeholder="Mobile Number or Email"><br>
-                      <input class="formright w100" type="text" name="lname" placeholder="Full Name"><br>
-                      <input class="formright w100" type="text" name="lname" placeholder="Username"><br>
-                      <input class="formright w100" type="text" name="lname" placeholder="Password"><br>
-                      <div class="submitsec">
-                      </div>
-                    </form>
-                  </div>
-
-                  <div class="row">
-
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-                    </div>
-
-                    <div class="col-md-10 col-sm-10 col-xs-10 pad">
-                      <input class="btn-block fb" type="submit" value="Next">
-                    </div>
-
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-                    </div>
-
-                  </div>
-
-                  <div class="row">
-
-                    <div class="col-md-2 col-sm-2 col-xs-2">
-                    </div>
-
-                    <div class="col-md-8 col-sm-8 col-xs-8 text-muted">
-                      By signing up, you agree to our Terms. Learn how we collect, use and share your data in our Data Policy and how we use cookies and similar technology in our Cookies Policy.
-                    </div>
-
-                  </div>
-
-                </div>
-                <!-- main row close -->
-
-                <div class="panel sp">
-                  <!--secondary row-->
-
-                  <div class="row">
-
-                    <div class="col-md-2 col-sm-2 col-xs-2">
-                    </div>
-
-                    <div class="col-md-8 col-sm-8 col-xs-8 text-center">
-                      <p>Have an account? <a href="https://www.instagram.com/accounts/login/">Log in</a></p>
-                    </div>
-
-                  </div>
-
-                </div>
-                <!--secondary row close-->
-
-                <div class="text-center">
-
-                  <div class="row">
-
-                    <div class="col-md-3">
-                    </div>
-
-                    <div class="col-md-6 gta">
-                      <p>Get the app.</p>
-                    </div>
-
-                  </div>
-
-                </div>
+              <div class="col-md-6 col-sm-0 phoneban">
 
                 <div class="container-fluid">
 
-                  <div class="row">
+                  <div id="phones">
+                    <img class="image" src="./images/leftcol.png">
+                  </div>
 
-                    <div class="col-md-1 col-sm-1 col-xs-1">
+                </div>
+
+
+              </div>
+
+            </div>
+            <!-- row close -->
+
+          </div>
+          <!-- left side container close -->
+
+          <div class="col-lg-2 col-md-4 col-sm-1 col-xs-0">
+          </div>
+
+          <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
+            <!-- right side container -->
+
+            <div class="container-flex">
+
+              <div class="panel text-center mp">
+                <!-- main row -->
+
+                <div class="row">
+
+                  <div class="col-md-12 col-sm-12">
+                    <img class="" src="./images/instag.png">
+                  </div>
+
+                </div>
+
+                <div class="row">
+
+                  <div class="col-md-2 col-sm-0 col-xs-1">
+                  </div>
+
+                  <div class="col-md-8 col-sm-12 col-xs-10">
+                    <h5 class="text-muted text-center">Sign up to see photos and videos from your friends.</h5>
+                  </div>
+
+                  <div class="col-md-2 col-sm-0 col-xs-1">
+                  </div>
+
+                </div>
+
+                <div class="row">
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+                  </div>
+
+                  <div class="col-md-10 col-sm-10 col-xs-10 pad-bottom">
+                    <input class="btn-block fb" type="submit" value="Log in with Facebook">
+                  </div>
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+                  </div>
+
+                </div>
+
+                <div class="row">
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+
+                  </div>
+
+                  <div class="col-md-4 col-sm-4 col-xs-4">
+                    <hr>
+                  </div>
+
+                  <div class="col-md-2 col-sm-2 col-xs-2 text-muted">
+                    <h5>OR</h5>
+                  </div>
+
+                  <div class="col-md-4 col-sm-4 col-xs-4">
+                    <hr>
+                  </div>
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+
+                  </div>
+
+                </div>
+
+                <div>
+                  <form action="/action_page.php">
+                    <input class="formright w100" type="text" name="fname" placeholder="Mobile Number or Email"><br>
+                    <input class="formright w100" type="text" name="lname" placeholder="Full Name"><br>
+                    <input class="formright w100" type="text" name="lname" placeholder="Username"><br>
+                    <input class="formright w100" type="text" name="lname" placeholder="Password"><br>
+                    <div class="submitsec">
+                    </div>
+                  </form>
+                </div>
+
+                <div class="row">
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+                  </div>
+
+                  <div class="col-md-10 col-sm-10 col-xs-10 pad">
+                    <input class="btn-block fb" type="submit" value="Next">
+                  </div>
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+                  </div>
+
+                </div>
+
+                <div class="row">
+
+                  <div class="col-md-2 col-sm-2 col-xs-2">
+                  </div>
+
+                  <div class="col-md-8 col-sm-8 col-xs-8 text-muted">
+                    By signing up, you agree to our Terms. Learn how we collect, use and share your data in our Data Policy and how we use cookies and similar technology in our Cookies Policy.
+                  </div>
+
+                </div>
+
+              </div>
+              <!-- main row close -->
+
+              <div class="panel sp">
+                <!--secondary row-->
+
+                <div class="row">
+
+                  <div class="col-md-2 col-sm-2 col-xs-2">
+                  </div>
+
+                  <div class="col-md-8 col-sm-8 col-xs-8 text-center">
+                    <p>Have an account? <a href="https://www.instagram.com/accounts/login/">Log in</a></p>
+                  </div>
+
+                </div>
+
+              </div>
+              <!--secondary row close-->
+
+              <div class="text-center">
+
+                <div class="row">
+
+                  <div class="col-md-3">
+                  </div>
+
+                  <div class="col-md-6 gta">
+                    <p>Get the app.</p>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="container-fluid">
+
+                <div class="row">
+
+                  <div class="col-md-1 col-sm-1 col-xs-1">
+                  </div>
+
+                  <div class="col-md-5 col-sm-5 col-xs-5">
+
+                    <div>
+
+                      <img class="img-responsive" src="./images/apple.png" alt="Appstore logo">
+
                     </div>
 
-                    <div class="col-md-5 col-sm-5 col-xs-5">
+                  </div>
 
-                      <div>
+                  <div class="col-md-5 col-sm-5 col-xs-5">
 
-                        <img class="img-responsive" src="./images/apple.png" alt="Appstore logo">
+                    <div>
 
-                      </div>
-
-                    </div>
-
-                    <div class="col-md-5 col-sm-5 col-xs-5">
-
-                      <div>
-
-                        <img class="img-responsive" src="./images/google.png" alt="Appstore logo">
-
-                      </div>
+                      <img class="img-responsive" src="./images/google.png" alt="Appstore logo">
 
                     </div>
 
-                    <div class="col-md-1 col-sm-1 col-xs-1">
-                    </div>
+                  </div>
 
+                  <div class="col-md-1 col-sm-1 col-xs-1">
                   </div>
 
                 </div>
@@ -230,45 +226,45 @@
               </div>
 
             </div>
-            <!-- right side cont close -->
-
-            <div class="col-lg-3 col-md-0 col-sm-0 col-xs-0">
-            </div>
-
 
           </div>
-          <!--main container close-->
+          <!-- right side cont close -->
 
-          <div class="container-fluid ftr">
+          <div class="col-lg-2 col-md-1 col-sm-0 col-xs-0">
+          </div>
 
-            <div class="footer">
 
-              <div class="row text-center">
+        </div>
+        <!--main container close-->
 
-                <div class="col-md-1 col-sm-0 col-xs-3">
-                </div>
+        <div class="container-fluid ftr">
 
-                <div class="col-md-10 col-sm-12 col-xs-6">
+          <div class="footer">
 
-                  <a>ABOUT US</A>
-                  <a>SUPPORT</A>
-                  <a>BLOG</A>
-                  <a>PRESS</A>
-                  <a>API</A>
-                  <a>JOBS</A>
-                  <a>PRIVACY</A>
-                  <a>TERMS</A>
-                  <a>DIRECTORY</A>
-                  <a>PROFILES</A>
-                  <a>HASHTAGS</A>
-                  <a>LANGUAGE</A>
-                  <p>(c) 2018 Instagram</p>
+            <div class="row text-center">
 
-                </div>
+              <div class="col-md-1 col-sm-0 col-xs-3">
+              </div>
 
-                <div class="col-md-1 col-sm-0 col-xs-3">
+              <div class="col-md-10 col-sm-12 col-xs-6">
 
-                </div>
+                <a>ABOUT US</A>
+                <a>SUPPORT</A>
+                <a>BLOG</A>
+                <a>PRESS</A>
+                <a>API</A>
+                <a>JOBS</A>
+                <a>PRIVACY</A>
+                <a>TERMS</A>
+                <a>DIRECTORY</A>
+                <a>PROFILES</A>
+                <a>HASHTAGS</A>
+                <a>LANGUAGE</A>
+                <p>(c) 2018 Instagram</p>
+
+              </div>
+
+              <div class="col-md-1 col-sm-0 col-xs-3">
 
               </div>
 
@@ -280,10 +276,9 @@
 
       </div>
 
+    </div>
 
-      <div class="col-lg-1 col-md-0 col-sm-2">
-      </div>
-
+    <div class="col-lg-1 col-md-1 col-sm-2">
     </div>
 
   </div>
